# Enki

./: .gitignore  Cargo.toml  Readme.md
src/: lib.rs  main.rs
src/actions/: args.rs  cursor.rs  editor.rs  event.rs  mod.rs  parse.rs  settings.rs  ui.rs  view.rs
src/core/: consts.rs  error.rs  logs.rs  mod.rs  utils.rs
src/debug/: actions.rs  mod.rs
src/debug/widgets/: action_log.rs  actions.rs  config.rs  mod.rs
src/debug/widgets/views/: config.rs  mod.rs  plugins.rs  text_area.rs  view.rs  view_details.rs  view_list.rs
src/editor/: actions.rs  event.rs  mod.rs  view_list.rs
src/editor/widgets/: mod.rs  top_bar.rs
src/enki/: config.rs  context.rs  interface.rs  mod.rs  reactor.rs  startup.rs  terminal.rs
src/prompt/: handler.rs  message.rs  mod.rs
src/prompt/widgets/: input.rs  mod.rs  msg_box.rs
src/textarea/: actions.rs  mod.rs
src/textarea/widgets/: chunk.rs  line.rs  mod.rs
src/view/: actions.rs  event.rs  mod.rs
src/view/widgets/: gutter.rs  mod.rs  status_bar.rs
src/xi/: line_cache.rs  mod.rs  styles.rs
src/xi/client/: child.rs  ext.rs  mod.rs  thread.rs
src/xi/protocol/: config.rs  findreplace.rs  language.rs  message.rs  mod.rs  notification.rs  plugins.rs  scroll_to.rs  theme.rs  update.rs
tests/: test.rs
tests/actions/: editor.rs  mod.rs  shell.rs  ui.rs  view.rs
tests/actions/event/: key.rs  mod.rs  mouse.rs
tests/core/: config.rs  mod.rs  reactor.rs
tests/widgets/: chunk.rs
tests/xi/: mod.rs  test_client.rs
tests/xi/notifications/: mod.rs
tests/xi/protocol/: insert.rs  new_view.rs  set_theme.rs
